# fastapi-file-based-router

./: .gitignore  README.md  REQUEST_BODIES.md  constants.py  demo.py  demo_requests.py  file_router.py  main.py  pyproject.toml  requirements.txt
docs/examples/: curl_examples.sh  demo.py  demo_requests.py  tag_customization_example.py
routes/: index.py  posts.py
routes/api/v1/: health.py
routes/blog/: [slug:].py
routes/files/: [...path].py
routes/users/: [:id].py  index.py
test/: test_curl.py  test_file_router.py
