[project]
name = "file-based-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.dev-dependencies]
pytest = ">=8.2.2"
httpx = ">=0.27.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "ruff>=0.12.6",
]
